--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -1,22 +1,30 @@
+<nav class="navbar navbar-default navbar-fixed-top">
+	<div class="container-fluid">
+		<div class="navbar-header">
+			<a class="navbar-brand" href="#">WPDA</a>
+		</div>
+		<div class="navbar-right">
+			{{auth-manager}}
+		</div>
+	</div>
+</nav>
 <div class="container-fluid">
 	{{outlet}}
 	<h2>List of Places</h2>
+	<button type="button" class="btn btn-default">Watch a New Place</button>
 	{{#if model.length}}
 	<table class="table-responsive table-striped table-condensed">
 		<thead>
 			<tr>
-				<th>Verified?</th>
+				<th>Verified?</th>	<!--This should only be visible when logged in-->
 				<th>Name</th>
-				<th>Lock level</th>
-				<th>Categories</th>
 				<th>Number</th>
 				<th>Street</th>
 				<th>City</th>
 				<th>State</th>
-				<th>Country</th>
-				<th>Updated by</th>
-				<th>Updated on</th>
-				<th>User report on</th>
+				<th>Categories</th>
+				<th>Last Updated</th>
+				<th>Lock Level</th>
 				<th>Residential?</th>
 			</tr>
 		</thead>
@@ -25,22 +33,19 @@
 			<tr>
 				<td>{{place.isVerified}}</td>
 				<td><a href="{{place.permalink}}">{{place.name}}</a></td>
-				<td>{{place.lockLevel}}</td>
-				<td>{{place.categories}}</td>
 				<td>{{place.number}}</td>
 				<td>{{place.street}}</td>
 				<td>{{place.city}}</td>
 				<td>{{place.state}}</td>
-				<td>{{place.country}}</td>
-				<td>{{place.updatedBy}}</td>
-				<td>{{place.updatedOn}}</td>
-				<td>{{place.userReportOn}}</td>
+				<td>{{place.categories}}</td>
+				<td>{{place.updatedBy}} on {{place.updatedOn}}</td>
+				<td>{{place.lockLevel}}</td>
 				<td>{{place.isResidential}}</td>
 			</tr>
 		{{/each}}
 		</tbody>
 	</table>
 	{{else}}
-	<p>No Places found</p>
+	<p>No places are being watched. Click the button above to watch a new place.</p>
 	{{/if}}
 </div>
