--- a/app/templates/components/auth-manager.hbs
+++ b/app/templates/components/auth-manager.hbs
@@ -5,7 +5,7 @@
 {{else}}
 <form class="form-inline auth-form" {{action 'authenticate'}}>
 	<div class="form-group">
-		<label class="control-label" for="username">Login</label>
+		<label class="control-label" for="username">Username</label>
 		{{input class="form-control auth-field" id="username" placeholder="Enter Username" value=username}}
 	</div>
 	<div class="form-group">
