Updated template. Removed simpleauth in favor of a more immediate solution.

--- a/app/templates/components/place-list.hbs
+++ b/app/templates/components/place-list.hbs
@@ -26,7 +26,7 @@
             {{else}}
             <td><input type="checkbox" disabled></td>
             {{/if}}
-            <td><a href="{{place.permalink}}">{{place.name}}</a></td>
+            <td><a href="{{place.permalink}}" target="_wme_venues">{{place.name}}</a></td>
             <td>{{place.number}}</td>
             <td>{{place.street}}</td>
             <td>{{place.city}}</td>
