--- a/app/templates/register.hbs
+++ b/app/templates/register.hbs
@@ -78,7 +78,7 @@
 				</div>
 				<div class="row">
 					<div class="col-sm-3 offset3">
-						<button type="button" class="btn btn-block btn-default" {{action "register"}}>Sign Up for democlient</button>
+						<button type="button" class="btn btn-block btn-default" {{action "register"}}>Register</button>
 					</div>
 				</div>
 				<div class="row">
