--- a/app/templates/components/auth-bar.hbs
+++ b/app/templates/components/auth-bar.hbs
@@ -5,11 +5,6 @@
 </form>
 {{else}} {{!Display login page}}
 <form class="navbar-form">
-	{{#if auth.errorMsg}}
-		<div class="auth-error alert">
-			{{auth.errorMsg}}
-		</div>
-	{{/if}}
 	{{input type="text" class="input form-control auth-field" value=auth.username enter="login" placeholder="Username"}}
 	{{input type="text" class="input form-control auth-field" value=auth.password enter="login" placeholder="Password" type="password"}}
 	{{input class="checkbox" type="checkbox" checked=auth.remember name="remember"}}
@@ -19,6 +14,9 @@
 	<p class="no-account right margin-3">Don't have an account?
 		{{#link-to "register"}}Register now.{{/link-to}}
 		<a class="glyphicon glyphicon-info-sign info-icon" {{action "showRegInfo"}}></a>
+		{{#if auth.errorMsg}}
+		<span class="text-danger bg-danger">{{auth.errorMsg}}</span>
+		{{/if}}
 	</p>
 </form>
 {{#bs-modal open=showRegInfo title="Why register?" footer=false}}
